fix(security): Phase L security audit — 25 vulnerabilities patched
Backend — Auth & Middleware:
- config.py: CORS_ORIGINS default changed from ["*"] to [] (must be
  explicitly set); add validate_settings() that raises at startup in
  production if SECRET_KEY is weak/default or CORS_ORIGINS is unset
- main.py: add SecurityHeadersMiddleware emitting X-Content-Type-Options,
  X-Frame-Options, X-XSS-Protection, HSTS, Referrer-Policy,
  Permissions-Policy on every response; wire slowapi limiter +
  RateLimitExceeded handler; fix allow_credentials to be false when
  wildcard origins are configured; add startup_checks event
- auth.py: add slowapi rate limits — login 10/min, signup 5/min,
  refresh 20/min, forgot-password 3/min, reset-confirm 5/min
- requirements.txt: add slowapi==0.1.9, pyotp==2.9.0

Backend — IDOR & Access Control:
- insights.py: GET /insights/dwolla-balance now requires require_admin
  (was completely unauthenticated)
- dwolla.py: GET /status/{transfer_id} now queries transactions table to
  verify transfer belongs to current_user before calling Dwolla API
- dwolla.py: POST /withdraw validates that funding_source_url matches
  the user's stored record in dwolla_customers — prevents funds being
  sent to another user's bank account
- social.py: POST /channels/{id}/translate verifies msg.channel_id
  matches URL channel_id and channel exists — closes cross-channel IDOR
- admin/social.py: ban endpoint replaces body: dict with BanUserRequest
  Pydantic schema (reason min/max length, duration_days ge/le bounds)
- admin/treasury.py: treasury bridge 2FA check now performs real TOTP
  validation via pyotp.TOTP.verify(valid_window=1) instead of only
  checking header presence

Backend — Race Conditions & Atomicity:
- wallet_service.py: request_withdrawal() uses SELECT ... FOR UPDATE to
  lock user row before balance check — prevents double-spend
- qr_code.py: submit_scan() uses SELECT ... FOR UPDATE to lock QRCode
  row before is_used check — prevents double-sca

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: "3.9"
 
+# WARNING: DEVELOPMENT ONLY — Do NOT use these defaults in production.
+# Set POSTGRES_PASSWORD, GRAFANA_ADMIN_PASSWORD, etc. via environment or .env file.
+
 # ─────────────────────────────────────────────────────────────────────────────
 # BlakJaks Platform — Local Development Stack
 #
@@ -17,10 +20,10 @@ services:
     container_name: blakjaks-postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: blakjaks
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
@@ -34,7 +37,7 @@ services:
     image: redis:7-alpine
     container_name: blakjaks-redis
     ports:
-      - "6379:6379"
+      - "127.0.0.1:6379:6379"
     volumes:
       - redis_data:/data
     healthcheck:
@@ -126,7 +129,7 @@ services:
     container_name: blakjaks-grafana
     environment:
       GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: blakjaks-local
+      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_ADMIN_PASSWORD:-blakjaks-local}
       GF_USERS_ALLOW_SIGN_UP: "false"
     volumes:
       - ./infrastructure/monitoring/grafana:/etc/grafana/provisioning:ro
