--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,4 +12,8 @@ COPY . .
 
 EXPOSE 8000
 
+# Run as non-root user
+RUN addgroup --system appgroup && adduser --system --ingroup appgroup appuser
+USER appuser
+
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
